--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -13,6 +13,7 @@
 
 <title>Materialien für Quantitative Methoden II</title>
 
+<script src="site_libs/header-attrs-2.6/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/united.min.css" rel="stylesheet" />
@@ -542,8 +543,8 @@ body {
 <font style="color:lightgrey;"> Einführung in R und Wiederholung von Inhalten aus Quanti I</font>
 </h1>
 <p><br></p>
-<div id="sitzung-1-einführung-in-das-arbeiten-mit-r" class="section level1">
-<h1><span class="header-section-number">1</span> Sitzung 1: Einführung in das Arbeiten mit R</h1>
+<div id="sitzung-1-einführung-in-das-arbeiten-mit-r" class="section level1" number="1">
+<h1 number="1"><span class="header-section-number">1</span> Sitzung 1: Einführung in das Arbeiten mit R</h1>
 <ul>
 <li><p>Begleitendes R-Skript: NEIN</p></li>
 <li><p>Anzahl Videos: 3</p></li>
@@ -565,8 +566,8 @@ body {
 </ul></li>
 </ul>
 <p><br></p>
-<div id="erste-schritte-in-r-teil-1" class="section level2">
-<h2><span class="header-section-number">1.1</span> Erste Schritte in R (Teil 1)</h2>
+<div id="erste-schritte-in-r-teil-1" class="section level2" number="1.1">
+<h2 number="1.1"><span class="header-section-number">1.1</span> Erste Schritte in R (Teil 1)</h2>
 <ul>
 <li><p>Begleitendes R-Skript: NEIN</p></li>
 <li><p>Zum Video (Dauer: 35 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1586534476460">hier</a></p></li>
@@ -603,8 +604,8 @@ body {
 </ul>
 <p><br></p>
 </div>
-<div id="erste-schritte-in-r-teil-2" class="section level2">
-<h2><span class="header-section-number">1.2</span> Erste Schritte in R (Teil 2)</h2>
+<div id="erste-schritte-in-r-teil-2" class="section level2" number="1.2">
+<h2 number="1.2"><span class="header-section-number">1.2</span> Erste Schritte in R (Teil 2)</h2>
 <ul>
 <li><p>Begleitendes R-Skript: NEIN</p></li>
 <li><p>Zum Video (Dauer: 40 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1586537113348">hier</a></p></li>
@@ -640,15 +641,15 @@ body {
 <p><br></p>
 </div>
 </div>
-<div id="sitzung-2-wiederholung-deskriptive-statistik-abbildung-t-tests" class="section level1">
-<h1><span class="header-section-number">2</span> Sitzung 2: Wiederholung deskriptive Statistik, Abbildung, t-Tests</h1>
+<div id="sitzung-2-wiederholung-deskriptive-statistik-abbildung-t-tests" class="section level1" number="2">
+<h1 number="2"><span class="header-section-number">2</span> Sitzung 2: Wiederholung deskriptive Statistik, Abbildung, t-Tests</h1>
 <ul>
 <li>Begleitendes R-Skript: <a href="q2_html_pages/Wiederholung1.html">Sitzung 2: Skript zu Video Teil 1 und 2</a></li>
 <li>Anzahl Videos: 2</li>
 <li>Das im Video angesprochene PDF gibt es <a href="q2_dataFiles/02_Einführung_R_SoSe21_Teil1.pdf">hier</a> und natürlich auch in stud.ip</li>
 </ul>
-<div id="teil-1" class="section level2">
-<h2><span class="header-section-number">2.1</span> Teil 1</h2>
+<div id="teil-1" class="section level2" number="2.1">
+<h2 number="2.1"><span class="header-section-number">2.1</span> Teil 1</h2>
 <ul>
 <li><p>Zum 1. Video (Dauer: 59 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1587658895535">hier</a></p></li>
 <li><p>Benötigter Datensatz: <a href="q2_dataFiles/IQ_Priming_between.csv">IQ-Werte und Priming (between)</a></p></li>
@@ -679,8 +680,8 @@ body {
 </ul>
 <p><br></p>
 </div>
-<div id="teil-2" class="section level2">
-<h2><span class="header-section-number">2.2</span> Teil 2</h2>
+<div id="teil-2" class="section level2" number="2.2">
+<h2 number="2.2"><span class="header-section-number">2.2</span> Teil 2</h2>
 <ul>
 <li><p>Zum 2. Video (Dauer: 22 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1587665148727">hier</a></p></li>
 <li><p>Benötigter Datensatz: <a href="q2_dataFiles/IQ_Urlaub_within.csv">IQ-Werte und Urlaub (within)</a></p></li>
@@ -704,14 +705,14 @@ body {
 <p><br></p>
 </div>
 </div>
-<div id="sitzung-3-daten-transformieren-weitere-abbildungen-korrelationen-rang--und-chi-quadrat-test" class="section level1">
-<h1><span class="header-section-number">3</span> Sitzung 3: Daten transformieren, weitere Abbildungen, Korrelationen, Rang- und Chi-Quadrat-Test</h1>
+<div id="sitzung-3-daten-transformieren-weitere-abbildungen-korrelationen-rang--und-chi-quadrat-test" class="section level1" number="3">
+<h1 number="3"><span class="header-section-number">3</span> Sitzung 3: Daten transformieren, weitere Abbildungen, Korrelationen, Rang- und Chi-Quadrat-Test</h1>
 <ul>
 <li><p>Begleitende R-Skripts: 2</p></li>
 <li><p>Anzahl Videos: 2</p></li>
 </ul>
-<div id="teil-1-1" class="section level2">
-<h2><span class="header-section-number">3.1</span> Teil 1</h2>
+<div id="teil-1-1" class="section level2" number="3.1">
+<h2 number="3.1"><span class="header-section-number">3.1</span> Teil 1</h2>
 <ul>
 <li><p>Zum 1. Video (Dauer: 60 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1588084379372">hier</a></p></li>
 <li><p>Benötigte Datensätze (2 Stück):</p>
@@ -762,8 +763,8 @@ body {
 </ul>
 <p><br></p>
 </div>
-<div id="teil-2-1" class="section level2">
-<h2><span class="header-section-number">3.2</span> Teil 2</h2>
+<div id="teil-2-1" class="section level2" number="3.2">
+<h2 number="3.2"><span class="header-section-number">3.2</span> Teil 2</h2>
 <ul>
 <li><p>Zum 2. Video (Dauer: 45 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1588088369419">hier</a></p></li>
 <li><p>Benötigte Datensätze (2 Stück):</p>
@@ -812,15 +813,15 @@ body {
 <p><br></p>
 </div>
 </div>
-<div id="sitzung-4-multiple-regressionsanalyse-i-und-ii" class="section level1">
-<h1><span class="header-section-number">4</span> Sitzung 4: Multiple Regressionsanalyse I und II</h1>
+<div id="sitzung-4-multiple-regressionsanalyse-i-und-ii" class="section level1" number="4">
+<h1 number="4"><span class="header-section-number">4</span> Sitzung 4: Multiple Regressionsanalyse I und II</h1>
 <ul>
 <li><p>Begleitende R-Skripts: 2</p></li>
 <li><p>Anzahl Videos: 2</p></li>
 <li><p>Benötigte Datensätze: 2</p></li>
 </ul>
-<div id="teil-1-multiple-regressionanalyse-in-r-durchführen" class="section level2">
-<h2><span class="header-section-number">4.1</span> Teil 1: Multiple Regressionanalyse in R durchführen</h2>
+<div id="teil-1-multiple-regressionanalyse-in-r-durchführen" class="section level2" number="4.1">
+<h2 number="4.1"><span class="header-section-number">4.1</span> Teil 1: Multiple Regressionanalyse in R durchführen</h2>
 <ul>
 <li><p>Zum Video (Dauer: ca. 60 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1588683817905">hier</a></p></li>
 <li><p>Benötigter Datensatz:</p>
@@ -860,8 +861,8 @@ body {
 </ul></li>
 </ul>
 <p><br></p>
-<div id="zusatz-zum-eigenständigen-üben" class="section level3">
-<h3><span class="header-section-number">4.1.1</span> Zusatz zum eigenständigen Üben</h3>
+<div id="zusatz-zum-eigenständigen-üben" class="section level3" number="4.1.1">
+<h3 number="4.1.1"><span class="header-section-number">4.1.1</span> Zusatz zum eigenständigen Üben</h3>
 <ul>
 <li>Die Daten für die am Ende des Video erwähnte Zusatzaufgabe gibt es <a href="q2_dataFiles/JellyfishDaten.csv">hier</a>.</li>
 <li>Falls ihr allein nicht weiterkommt, gibt es das Skript dazu <a href="q2_html_pages/Sitzung4b_Regression01.html">hier</a>.</li>
@@ -869,8 +870,8 @@ body {
 <p><br></p>
 </div>
 </div>
-<div id="teil-2-modellvergleiche" class="section level2">
-<h2><span class="header-section-number">4.2</span> Teil 2: Modellvergleiche</h2>
+<div id="teil-2-modellvergleiche" class="section level2" number="4.2">
+<h2 number="4.2"><span class="header-section-number">4.2</span> Teil 2: Modellvergleiche</h2>
 <ul>
 <li><p>Zum Video (Dauer: ca. 60 min) geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1589288598232">hier</a></p></li>
 <li><p>Benötigter Datensatz:</p>
@@ -912,8 +913,8 @@ body {
 </ul></li>
 </ul>
 <p><br></p>
-<div id="zusatz-zum-eigenständigen-üben-1" class="section level3">
-<h3><span class="header-section-number">4.2.1</span> Zusatz zum eigenständigen Üben</h3>
+<div id="zusatz-zum-eigenständigen-üben-1" class="section level3" number="4.2.1">
+<h3 number="4.2.1"><span class="header-section-number">4.2.1</span> Zusatz zum eigenständigen Üben</h3>
 <ul>
 <li><p>Die Daten für die am Ende des Video erwähnte Zusatzaufgabe gibt es <a href="q2_dataFiles/Daten_Albumsales.csv">hier</a>.</p></li>
 <li><p>Falls ihr allein nicht weiterkommt, gibt es das Skript dazu <a href="q2_html_pages/Sitzung4d_Regression02.html">hier</a>.</p></li>
@@ -923,8 +924,8 @@ body {
 </div>
 </div>
 </div>
-<div id="sitzung-5-multiple-regressionsanalyse-iii-prüfung-annahmen" class="section level1">
-<h1><span class="header-section-number">5</span> Sitzung 5: Multiple Regressionsanalyse III (Prüfung Annahmen)</h1>
+<div id="sitzung-5-multiple-regressionsanalyse-iii-prüfung-annahmen" class="section level1" number="5">
+<h1 number="5"><span class="header-section-number">5</span> Sitzung 5: Multiple Regressionsanalyse III (Prüfung Annahmen)</h1>
 <ul>
 <li><p>Begleitende R-Skripts: 1, das gibt es <a href="q2_html_pages/Sitzung5a_Annahmen.html">hier</a></p></li>
 <li><p>Anzahl Videos: 1 (Dauer ca. 66 min), zum Video geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1589892041573">hier</a></p></li>
@@ -959,16 +960,16 @@ body {
 </ul></li>
 </ul>
 <p><br></p>
-<div id="zusatz-zum-eigenständigen-üben-2" class="section level2">
-<h2><span class="header-section-number">5.1</span> Zusatz zum eigenständigen Üben</h2>
+<div id="zusatz-zum-eigenständigen-üben-2" class="section level2" number="5.1">
+<h2 number="5.1"><span class="header-section-number">5.1</span> Zusatz zum eigenständigen Üben</h2>
 <ul>
 <li>Die Daten für eine Zusatzaufgabe gibt es <a href="q2_dataFiles/Daten_Supermodels.csv">hier</a>.</li>
 <li>Das Script dazu, gibt es <a href="q2_html_pages/Sitzung5b_PruefungAnnahmen_Zusatzaufgabe_SuperModels_Loesung.html">hier</a>.</li>
 </ul>
 </div>
 </div>
-<div id="sitzung-6-einfaktorielle-anova-oder-lineares-modell-bei-faktoren-mit-mehr-als-zwei-ausprägungen" class="section level1">
-<h1><span class="header-section-number">6</span> Sitzung 6: Einfaktorielle ANOVA (oder: Lineares Modell bei Faktoren mit mehr als zwei Ausprägungen )</h1>
+<div id="sitzung-6-einfaktorielle-anova-oder-lineares-modell-bei-faktoren-mit-mehr-als-zwei-ausprägungen" class="section level1" number="6">
+<h1 number="6"><span class="header-section-number">6</span> Sitzung 6: Einfaktorielle ANOVA (oder: Lineares Modell bei Faktoren mit mehr als zwei Ausprägungen )</h1>
 <ul>
 <li><p>Begleitende R-Skripts: 1, das gibt es <a href="q2_html_pages/Sitzung6_Regression_EinfaktorielleAnova_Glastonbury_Day1_Day3.html">hier</a></p></li>
 <li><p>Anzahl Videos: 1 (Dauer ca. 75 min), zum Video geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1591186909168">hier</a></p></li>
@@ -1015,15 +1016,15 @@ body {
 </ul></li>
 </ul>
 <p><br></p>
-<div id="zusatz-zum-eigenständigen-üben-3" class="section level2">
-<h2><span class="header-section-number">6.1</span> Zusatz zum eigenständigen Üben</h2>
+<div id="zusatz-zum-eigenständigen-üben-3" class="section level2" number="6.1">
+<h2 number="6.1"><span class="header-section-number">6.1</span> Zusatz zum eigenständigen Üben</h2>
 <ul>
 <li>Im Video führen wir die ANOVA nur für “Tag 1” des Festivals durch. Es gibt aber auch Daten für “Tag 3”. Dafür können Sie die Analyse selbständig machen. Zur Not finden sie das Script aber auch weiter unten im begleitenden und oben angegeben HTML-Script.</li>
 </ul>
 </div>
 </div>
-<div id="sitzung-7-mehrfaktorielle-anova" class="section level1">
-<h1><span class="header-section-number">7</span> Sitzung 7: Mehrfaktorielle ANOVA</h1>
+<div id="sitzung-7-mehrfaktorielle-anova" class="section level1" number="7">
+<h1 number="7"><span class="header-section-number">7</span> Sitzung 7: Mehrfaktorielle ANOVA</h1>
 <ul>
 <li><p>Begleitende R-Skripts: 1, das gibt es <a href="q2_html_pages/Sitzung7_Anova_Zweifaktoriell_Krankheitsstudie_details.html">hier</a></p></li>
 <li><p>Das Markdown-File zum Script gibt es als ZIP-File <a href="q2_dataFiles/Sitzung7_Anova_Zweifaktoriell_Krankheitsstudie_details.zip">hier</a></p></li>
@@ -1052,12 +1053,14 @@ body {
 </ul></li>
 </ul>
 <p><br></p>
-<div id="zusatz-zum-eigenständigen-üben-4" class="section level2">
-<h2><span class="header-section-number">7.1</span> Zusatz zum eigenständigen Üben</h2>
+<div id="zusätzliche-aufgaben-zum-eigenständigen-üben" class="section level2" number="7.1">
+<h2 number="7.1"><span class="header-section-number">7.1</span> Zusätzliche Aufgaben zum eigenständigen Üben</h2>
 <ul>
 <li>Am Ende des Videos sprechen wir kurz über einen weiteren Datensatz zum eigenständigen Üben. Den findet ihr <a href="q2_dataFiles/CatsData.csv">hier</a>.</li>
 <li>Das R-Script dazu gibt es <a href="q2_html_pages/Sitzung7_Zusatz_KatzenMusterloesung.html">hier</a>.</li>
 <li>Das Markdown-File zum Script gibt es als ZIP-File <a href="q2_dataFiles/Sitzung7_Zusatz_KatzenMusterloesung.zip">hier</a></li>
+<li>Eine weitere Übungsaufgabe für Interaktionen zwischen einer kontinuierlichen Variablen und einem Faktor gibt es <a href="q2_dataFiles/Spinnenphobie.zip">hier</a> als zip-File mit allen notwendigen Dateien (Aufgabe, Lösung, Daten). Die Lösung zum online ansehen gibt es <a href="q2_dataFiles/Spinnenphobie_Loesung.html">hier</a></li>
+<li>Eine Übersicht über mögliche Interaktionsmuster bei 2x2 faktoriellen Designs und ihre Interpretation (inklusive Möglichkeit zum eigenständigen Simulieren von Daten) gibt es <a href="q2_dataFiles/InteraktionsgrafikenVerstehen.zip">hier</a> (als zip-File mit Rmd-Datei) oder als reine Übersicht <a href="q2_dataFiles/InteraktionsgrafikenVerstehen.html">hier</a>.</li>
 </ul>
 </div>
 </div>
