--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -482,6 +482,12 @@ div.tocify {
     <li>
       <a href="q2_html_pages/Sitzung7_Zusatz_KatzenMusterloesung.html">Sitzung 7: Skript Zusatzaufgabe Katzen</a>
     </li>
+    <li>
+      <a href="q2_html_pages/Sitzung8_Spinnenphobie_Loesung.html">Sitzung 8: Skript zu Spinnenphobieaufgabe</a>
+    </li>
+    <li>
+      <a href="q2_html_pages/Sitzung8_Konzentration_Loesung.html">Sitzung 8: Skript zur Konzentrationsaufgabe</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -1020,6 +1026,7 @@ body {
 <ul>
 <li>Im Video führen wir die ANOVA nur für “Tag 1” des Festivals durch. Es gibt aber auch Daten für “Tag 3”. Dafür können Sie die Analyse selbständig machen. Zur Not finden sie das Script aber auch weiter unten im begleitenden und oben angegeben HTML-Script.</li>
 </ul>
+<p><br></p>
 </div>
 </div>
 <div id="sitzung-7-mehrfaktorielle-anova" class="section level1">
@@ -1052,14 +1059,33 @@ body {
 </ul></li>
 </ul>
 <p><br></p>
-<div id="zusatz-zum-eigenständigen-üben-4" class="section level2">
-<h2><span class="header-section-number">7.1</span> Zusatz zum eigenständigen Üben</h2>
+<div id="zusätzliche-aufgaben-zum-eigenständigen-üben" class="section level2">
+<h2><span class="header-section-number">7.1</span> Zusätzliche Aufgaben zum eigenständigen Üben</h2>
 <ul>
 <li>Am Ende des Videos sprechen wir kurz über einen weiteren Datensatz zum eigenständigen Üben. Den findet ihr <a href="q2_dataFiles/CatsData.csv">hier</a>.</li>
 <li>Das R-Script dazu gibt es <a href="q2_html_pages/Sitzung7_Zusatz_KatzenMusterloesung.html">hier</a>.</li>
 <li>Das Markdown-File zum Script gibt es als ZIP-File <a href="q2_dataFiles/Sitzung7_Zusatz_KatzenMusterloesung.zip">hier</a></li>
 </ul>
+<p><br></p>
 </div>
+</div>
+<div id="sitzung-8-interaktionen-bei-prädiktoren-auf-verschiedenen-skalenniveaus" class="section level1">
+<h1><span class="header-section-number">8</span> Sitzung 8: Interaktionen bei Prädiktoren auf verschiedenen Skalenniveaus</h1>
+<ul>
+<li>Begleitende R-Skripts: 2</li>
+<li>Anzahl Videos: 0</li>
+<li>Benötigte Datensätze: 2</li>
+</ul>
+<p><br></p>
+<ul>
+<li><p>Eine Übungsaufgabe zu Interaktionen zwischen einer <em>kontinuierlichen</em> Variablen und einem <em>kategorialen</em> Faktor gibt es <a href="q2_dataFiles/Spinnenphobie.zip">hier</a> als zip-File mit allen notwendigen Dateien (Aufgabe, Lösung, Daten).</p>
+<ul>
+<li>Die Lösung zum online ansehen gibt es <a href="q2_dataFiles/Spinnenphobie_Loesung.html">hier</a></li>
+</ul></li>
+<li><p>Eine Übungsaufgabe zu Interaktionen bei ausschließlich kontinuierlichen Prädiktoren gibt es <a href="q2_dataFiles/Konzentration.zip">hier</a> als zip-File mit allen notwendigen Dateien.</p></li>
+<li><p>Außerdem gibt es noch: Eine Übersicht über mögliche Interaktionsmuster bei 2x2 faktoriellen Designs und ihre Interpretation (inklusive Möglichkeit zum eigenständigen Simulieren von Daten) gibt es <a href="q2_dataFiles/InteraktionsgrafikenVerstehen.zip">hier</a> (als zip-File mit Rmd-Datei) oder als reine Übersicht <a href="q2_dataFiles/InteraktionsgrafikenVerstehen.html">hier</a>.</p></li>
+</ul>
+<p><br></p>
 </div>
 
 <p><font size="-1.5">Copyright &copy; 2020 Simon Stephan. All rights reserved.</font></p>
