--- a/page-08kontraste.html
+++ b/page-08kontraste.html
@@ -482,6 +482,12 @@ div.tocify {
     <li>
       <a href="q2_html_pages/Sitzung7_Zusatz_KatzenMusterloesung.html">Sitzung 7: Skript Zusatzaufgabe Katzen</a>
     </li>
+    <li>
+      <a href="q2_html_pages/Sitzung8_Spinnenphobie_Loesung.html">Sitzung 8: Skript zu Spinnenphobieaufgabe</a>
+    </li>
+    <li>
+      <a href="q2_html_pages/Sitzung8_Konzentration_Loesung.html">Sitzung 8: Skript zur Konzentrationsaufgabe</a>
+    </li>
   </ul>
 </li>
       </ul>
