--- a/page-q2_materials.html
+++ b/page-q2_materials.html
@@ -491,6 +491,9 @@ div.tocify {
     <li>
       <a href="q2_html_pages/Sitzung9_Kontraste_Zweifaktoriell_Krankheitsstudie.html">Sitzung 9: Skript Video Kontraste</a>
     </li>
+    <li>
+      <a href="q2_html_pages/Sitzung10_Multilevel.html">Sitzung 10: Skript Video Multi-Level-Analysen</a>
+    </li>
   </ul>
 </li>
       </ul>
@@ -1138,6 +1141,47 @@ body {
 <h2><span class="header-section-number">9.1</span> Zusatzaufgabe</h2>
 <p><br></p>
 <p>Ihr könnt den Katzendatensatz, der als Zusatz in Übung 7 besprochen angesprochen wurde, könnt ihr noch einmal eigenständig diese Art der Kontrastanalyse üben. In dem oben zu dieser Sitzung verlinkten ZIP-File sind die Daten (und auch ein Script) mit enthalten.</p>
+<p>Helmert-Kontraste können anhand des Glastonbury-Datensatzes geübt werden, alle benötigten Dateien gibt es als zip-Ordner <a href="q2_dataFiles/Glastonbury_Helmert.zip">hier</a> und eine Lösung zum online ansehen <a href="q2_html_pages/Sitzung9_Kontraste_Helmert.html">hier</a>.</p>
+<p><br></p>
+</div>
+</div>
+<div id="sitzung-10-multi-level-analysen" class="section level1">
+<h1><span class="header-section-number">10</span> Sitzung 10: Multi-Level-Analysen</h1>
+<ul>
+<li><p>Begleitende R-Skripts: 1, das gibt es <a href="q2_html_pages/Sitzung9_Kontraste_Zweifaktoriell_Krankheitsstudie.html">hier</a></p></li>
+<li><p>Das Markdown-File und die <em>Daten</em> gibt es als ZIP-File <a href="q2_dataFiles/Sitzung10.zip">hier</a></p></li>
+<li><p>Anzahl Videos: 1 (Dauer ca. 65 min), zum Video geht es <a href="https://conf.psych.bio.uni-goettingen.de/playback/presentation/2.0/playback.html?meetingId=e9fc7316f0e71f84eb717675ff6a37bfe13025e4-1593595782293">hier</a></p></li>
+</ul>
+<p><br></p>
+<ul>
+<li>Inhalt (Timestamps):
+<ul>
+<li>00:00 Intro (das beste Intro ever)</li>
+<li>03:00 Einführung Bsp. und kurzer theoretischer Hintergrund</li>
+<li>15:00 Multi-Level Analyse als Vergleich mehrer Modelle</li>
+<li>18:00 Das Beispiel in R</li>
+<li>21:00 Grafiken erstellen</li>
+<li>29:00 Modelle definieren (erst Nullmodell)</li>
+<li>33:00 Dann “Random Intercept Modell” anpassen</li>
+<li>43:00 Random Intercept Modell testen gegen Nullmodell - Likelihood-Test</li>
+<li>44:40 Modell dass den Prädiktor nun aufnimmt. Danach testen gegen Random Intercept Modell</li>
+<li>48:30 Modell mit zusätzlichem “Random Slope” und wieder testen. Danach Effektstärke</li>
+<li>59:00 Warum nicht einfach ANOVA oder ein “normales” lineares Modell?</li>
+</ul></li>
+</ul>
+<p><br></p>
+<ul>
+<li><p><strong>Lernziele</strong>: Nach dem Durcharbeiten des Videos solltet ihr…</p>
+<ul>
+<li>wissen, was Multi-Level-Analysen sind und wie man damit hierarchische Daten-Strukturen statistisch analysieren kann.</li>
+</ul></li>
+</ul>
+<p><br></p>
+<div id="zusatzaufgabe-1" class="section level2">
+<h2><span class="header-section-number">10.1</span> Zusatzaufgabe</h2>
+<p><br></p>
+<p>In einer weiteren (zusätzlichen) Übungsaufgabe für euch geht es um die Wirksamkeit von Lernkompetenztrainings, die an verschiedenen Schulen untersucht werden soll.</p>
+<p>Alle benötigten Dateien gibt es als zip-Ordner <a href="q2_dataFiles/10_Multi_Level_school_training.zip">hier</a>.</p>
 <p><br></p>
 </div>
 </div>
