--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q1_materials.html">Übungsdatensätze</a>
+      <a href="page-q1_materials.html">Videos und Übungsdatensätze</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
@@ -442,14 +442,14 @@ $(document).ready(function () {
 </div>
 <p>Herzlich willkommen auf der Begleitseite für die Seminare der Module <strong>Quantitative Methoden I</strong> (Wintersemester) und <strong>Quantitative Methoden II</strong> (Sommersemester) im Studienfach Psychologie an der Uni Göttingen. In den Seminaren sollen Sie die theoretischen Inhalte der Vorlesung durch praktische Anwendung vertiefen. Diese Seite soll Sie dabei unterstützen.</p>
 <p><br></p>
-<p>Sie finden hier Zusammenfassungen und Tutorials der einzelnen Sitzungen.</p>
+<p>Sie finden hier Lehrvideos, Zusammenfassungen und Tutorials der einzelnen Sitzungen.</p>
 <p><br></p>
 <p>Zu den verschiedenen Sitzungen gelangen Sie über die jeweiligen Menüs oben in der Navigationsleiste.</p>
 <p><br></p>
 <p>Eine Übersicht über die Lernmaterialien (Übungsdaten und Musterlösungen) haben wir auf separaten Seiten für Sie zusammengestellt. Dort können Sie sich die Materialien auch direkt downloaden. Alternativ finden Sie natürlich auch alle Dateien in Stud-IP.</p>
 <p><br></p>
 <ul>
-<li><p>Zu den Materalien für <strong>Quanti I</strong> geht es <a href="page-q1_materials.html">hier</a>.</p></li>
+<li><p>Zu den Materalien (Videos, Datensätze, etc.) für <strong>Quanti I</strong> geht es <a href="page-q1_materials.html">hier</a>.</p></li>
 <li><p>Zu den Video-Links und Materialien für <strong>Quanti II</strong> geht es <a href="page-q2_materials.html">hier</a>.</p></li>
 </ul>
 <p><br></p>
