--- a/page-01einfuehrung.html
+++ b/page-01einfuehrung.html
@@ -380,7 +380,7 @@ div.tocify {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q1_materials.html">Übungsdatensätze</a>
+      <a href="page-q1_materials.html">Videos und Übungsdatensätze</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
@@ -519,6 +519,8 @@ div.tocify {
 <p>Für die Übungen im Modul Quantitative Methoden I benötigen Sie das Tabellenkalkulationsprogramm <strong>Microsoft Excel</strong>. Sofern Sie Excel nicht bereits auf Ihrem Rechner nutzen, können Sie als Studierende/r das Programm günstig über eine Uni-Lizenz bei studyhouse erwerben. Klicken Sie dazu einfach <a href="https://www.studyhouse.de/cgi-bin/product/office-proplus-georg-august-universitaet-goettingen-microsoft-bueroapplikationen-P10016549!381464">hier</a>.</p>
 <p>Eine frei verfügbare Alternative zu Microsoft Excel ist das Programm <strong>Libre Office Calc</strong>, welches Sie <a href="https://de.libreoffice.org/discover/calc/">hier</a> herunterladen können. Auch mit Libre Office Calc kann man die meisten Dinge machen. Die Übungen in diesem Seminar werden aber trotzdem mit Excel durchgeführt.</p>
 <p><br /></p>
+<p>In dieser ersten Sitzung möchten wir Sie mit dem Programm Excel vertraut machen. Das Lehrvideo, dass wir für Sie dafür bereitstellen finden Sie <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1604322348096">hier</a>. Zusätzlich ist alles auch auf dieser Seite beschrieben. Sie können also einfach das Video schauen, oder (und) diese Seite durchlesen.</p>
+<p>Für alle nachfolgenden Sitzungen finden sie die Links zu den Videos in der Seite zu den Materialien, also <a href="page-q1_materials.html">hier</a>.</p>
 <p><br /></p>
 <div id="erste-schritte---die-exceloberfläche" class="section level1">
 <h1><span class="header-section-number">1</span> Erste Schritte - die Exceloberfläche</h1>
