--- a/page-q1_materials.html
+++ b/page-q1_materials.html
@@ -304,7 +304,7 @@ $(document).ready(function () {
   <ul class="dropdown-menu" role="menu">
     <li class="dropdown-header">Material</li>
     <li>
-      <a href="page-q1_materials.html">Übungsdatensätze</a>
+      <a href="page-q1_materials.html">Videos und Übungsdatensätze</a>
     </li>
     <li class="divider"></li>
     <li class="divider"></li>
@@ -449,6 +449,7 @@ body {
 <div id="sitzung-1-arbeiten-mit-ms-excel" class="section level4">
 <h4>Sitzung 1: Arbeiten mit MS Excel</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1604322348096">click to watch</a></li>
 <li>Excel-Datensatz “Lebenserwartung von Hörnchen”: <a href="q1_dataFiles/01_Einfuehrung_LebenserwartungHoernchen.xlsx">download</a></li>
 <li>Excel-Datensatz “Geburtstage und Jahreszeiten”: <a href="q1_dataFiles/01_Einfuehrung_Geburtstage.xlsx">download</a></li>
 </ul>
@@ -460,6 +461,7 @@ body {
 <div id="sitzung-2-umfragen-und-experimente---datenaufbereitung" class="section level4">
 <h4>Sitzung 2: Umfragen und Experimente - Datenaufbereitung</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1604926493807">click to watch</a></li>
 <li>Excel-Datensatz “Umwelt- und Prokrastinationsfragebogen 2019”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2019.xlsx">download</a></li>
 <li>Excel-Datensatz “Umwelt- und Prokrastinationsfragebogen 2020”: <a href="q1_dataFiles/02_Deskriptive_Statistik_Umfragen_2020.xlsx">download</a></li>
 </ul>
@@ -467,6 +469,7 @@ body {
 <div id="sitzung-3-deskriptive-datenanalyse-und-grafiken" class="section level4">
 <h4>Sitzung 3: Deskriptive Datenanalyse und Grafiken</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1605530858993">click to watch</a></li>
 <li>Excel-Datensatz “Trolley-Dilemma”: <a href="q1_dataFiles/03_Experimente_und_deskriptive_Statistik.xlsx">download</a></li>
 <li>Excel-Datensatz “Trolley-Dilemma WiSe 20/21”: <a href="q1_dataFiles/03_TrolleyData_WiSe20_Push_vs_Switch.xlsx">download</a></li>
 <li>Excel-Datensatz “Trolley-Dilemma WiSe 20/21” (Zusatzaufgabe): <a href="q1_dataFiles/03_Trolley_2020_OrderEffects_Zusatzaufgabe.xlsx">download</a></li>
@@ -480,12 +483,14 @@ body {
 <div id="sitzung-4-arbeiten-mit-wahrscheinlichkeitsverteilungen" class="section level4">
 <h4>Sitzung 4: Arbeiten mit Wahrscheinlichkeitsverteilungen</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1606136481412">click to watch</a></li>
 <li>Excel-Datensatz “Wahrscheinlichkeitsverteilungen”: <a href="q1_dataFiles/04_Wahrscheinlichkeitsverteilungen.xlsx">download</a></li>
 </ul>
 </div>
 <div id="sitzung-5-mittelwerte-standardfehler-und-konfidenzintervall" class="section level4">
 <h4>Sitzung 5: Mittelwerte, Standardfehler und Konfidenzintervall</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1606741306663">click to watch</a></li>
 <li>Excel-Datensatz “Standardfehler und Konfidenzintervalle IQ-Studie”: <a href="q1_dataFiles/05_Standardfehler_Konfidenzintervalle.xlsx">download</a></li>
 <li>Excel-Datensatz “Standardfehler und Konfidenzintervalle Depressions-Studie”: <a href="q1_dataFiles/05_Standardfehler_Konfidenzintervalle_Zusatzaufgabe.xlsx">download</a></li>
 </ul>
@@ -493,18 +498,21 @@ body {
 <div id="sitzung-6-mittelwertsunterschiede-prüfen---t-tests" class="section level4">
 <h4>Sitzung 6: Mittelwertsunterschiede prüfen - t-Tests</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1607346057304">click to watch</a></li>
 <li>Excel-Datensatz “Signifikanztests”: <a href="q1_dataFiles/06_Signifikanztests.xlsx">download</a></li>
 </ul>
 </div>
 <div id="sitzung-7-g-power-zur-testplanung" class="section level4">
 <h4>Sitzung 7: G-Power zur Testplanung</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1607951163758">click to watch</a></li>
 <li>Excel-Datensatz "G*Power zur Testplanung": <a href="q1_dataFiles/07_Hypothesentesten_Testplanung.xlsx">download</a></li>
 </ul>
 </div>
 <div id="sitzung-8-zwischensitzung-anwendung-des-bisher-gelernten" class="section level4">
 <h4>Sitzung 8 Zwischensitzung: Anwendung des bisher Gelernten</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1608641691178">click to watch</a></li>
 <li>Excel-Datensatz “Doping am Nordpol”: <a href="q1_dataFiles/Zwischensitzung_DopingNordpol.xlsx">download</a></li>
 <li>Excel-Datensatz “Doping am Nordpol Lösung”: <a href="q1_dataFiles/Zwischensitzung_DopingNordpol_Loesung.xlsx">download</a></li>
 </ul>
@@ -512,12 +520,14 @@ body {
 <div id="sitzung-9-kontraste" class="section level4">
 <h4>Sitzung 9: Kontraste</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1610370034874">click to watch</a></li>
 <li>Excel-Datensatz “Kontraste”: <a href="q1_dataFiles/08_Kontraste.xlsx">download</a></li>
 </ul>
 </div>
 <div id="sitzung-10-wilcoxon-rangsummentest" class="section level4">
 <h4>Sitzung 10: Wilcoxon-Rangsummentest</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1610974447735">click to watch</a></li>
 <li>Excel-Datensatz “Therapie von Panikstörungen”: <a href="q1_dataFiles/10_Rangtests.xlsx">download</a></li>
 <li>Excel-Datensatz “Reaktion von Haustieren auf Lockdown”: <a href="q1_dataFiles/10_Rangtests_Haustiere.xlsx">download</a></li>
 </ul>
@@ -525,12 +535,14 @@ body {
 <div id="sitzung-11-korrelationen-und-z-test" class="section level4">
 <h4>Sitzung 11: Korrelationen und z-Test</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1611579913078">click to watch</a></li>
 <li>Excel-Datensatz “Depression und Angst”: <a href="q1_dataFiles/11_Korrelationen.xlsx">download</a></li>
 </ul>
 </div>
 <div id="sitzung-12-analyse-von-nominaldaten" class="section level4">
 <h4>Sitzung 12: Analyse von Nominaldaten</h4>
 <ul>
+<li>Video: <a href="https://meet.gwdg.de/playback/presentation/2.0/playback.html?meetingId=3a5090b1b7c59a6fa8b54c1cb6b76bc70e77eed3-1612184087205">click to watch</a></li>
 <li>Excel-Datensatz “Covid-Impfung”: <a href="q1_dataFiles/12_Nominaldaten.xlsx">download</a></li>
 </ul>
 </div>
